added dev icons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	  	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 	  	<!-- FONT AWESOME CDN. -->
 	  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <!-- DEV ICON -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 	</head>
 	<body>
 		<!-- JavaScript SDK -->
@@ -53,37 +55,49 @@
                         mathematics. Then, I transferred to California State University Fullerton in 
                         Fullerton, CA.
                         <br><br>
-                        At the moment, I am seeking entry-level work as a software engineer! More specifically, 
-                        a role in front-end web development or even full-stack!
+                        At the moment, I am seeking entry-level work as a software engineer!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
                     </p>
                 </header>
             </div>
             <!-- MY SKILLS -->
             <div class="skills">
-                <h2>Technical Skills</h2>
-                <p>I am comfortable with the following!</p>
-                    <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>JavaScript (ES6)</li>
-                        <li>Bootstrap 5</li>
-                        <li>SCSS (Sass)</li>
-                        <li>Jekyll</li>
-                        <li>Python</li>
-                        <li>SQLite</li>
-                        <li>Flask</li>
-                        <li>REST</li>
+                <h2>Technological Skills</h2>
+                    <p>I am very comfortable with front-end technologies. In fact, I excel at 
+                        writing code to develop attractive and responsive user interfaces that 
+                        offers a wonderful experience for the user.
+                    </p>
+                    <ul class="skills-grid">
+                        <li><img alt="HTML5" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" /></li>
+                        <li><img alt="CSS3" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" /></li>
+                        <li><img alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" /></li>
+                        <li><img alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" /></li>
+                        <li><img alt="SCSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" /></li>
+                        <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li>
                     </ul>
-                <p>I am familiar with the following!</p>
-                    <ul>
-                        <li>C++</li>
-                        <li>Git</li>
-                        <li>Linux</li>
-                        <li>React</li>
+                    <p>In college, most of my projects were written in C++ and Python. Thus, I am familiar 
+                        and comfortable with both of these programming languages. At the moment, I prefer 
+                        Python when working with back-end technologies.
+                    </p>
+                    <ul class="skills-grid">
+                        <li><img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" /></li>
+                        <li><img alt="C++" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /></li>
+                    </ul>
+                    <p>I have written many applications using VS Code in a Linux or Windows environment. I have 
+                        also used Git in the terminal along with Github often when collaborating with a development 
+                        team.
+                    </p>
+                    <ul class="skills-grid">
+                        <li><img alt="Github" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" /></li>
+                        <li><img alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" /></li>
+                        <li><img alt="Windows" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/windows8/windows8-original.svg" /></li>
+                        <li><img alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" /></li>
+                        <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" /></li>
                     </ul>
                 <h2>Soft Skills</h2>
-                <p>I work great with people and I enjoy leadership roles!</p>
+                <p>I work great with people and I enjoy leadership roles! Truthfully, I find it satisfying to 
+                    plan out a project and keep track of tasks to be completed before their due dates.
+                </p>
                     <ul>
                         <li>Teamwork</li>
                         <li>Leadership</li>
