repetitive words usage fix

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         mathematics. Then, I transferred to California State University Fullerton in 
                         Fullerton, CA.
                         <br><br>
-                        At the moment, I am seeking entry-level work as a software engineer!
+                        With that said, I am seeking entry-level work as a software engineer!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
                     </p>
                 </header>
@@ -76,7 +76,7 @@
                         <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li>
                     </ul>
                     <p>In college, most of my projects were written in C++ and Python. Thus, I am familiar 
-                        and comfortable with both of these programming languages. At the moment, I prefer 
+                        and comfortable with both of these programming languages. Right now, I prefer 
                         Python when working with back-end technologies.
                     </p>
                     <ul class="skills-grid">
