--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
                         <li><img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" /></li>
                         <li><img alt="C++" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /></li>
                     </ul>
+                    <p>To communicate with a database, I am familiar with the use of SQL and relational databases. 
+                        Most recently, I have made use of SQLite with Python when working on a REST API for a 
+                        school assignment.
+                    </p>
+                    <ul class="skills-grid">
+                        <li><img alt="SQLite" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-plain-wordmark.svg" /></li>
+                    </ul>
                     <p>I have written many applications using VS Code in a Linux or Windows environment. I have 
                         also used Git in the terminal along with Github often when collaborating with a development 
                         team.
