--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                         <br><br>
                         I got my start at Copper Mountain College in Joshua Tree, California. From 
                         there, I graduated with an associate's degree in computer science and 
-                        mathematics. Then, I transferred to California State University Fullerton in 
-                        Fullerton, CA where I got my bachelor's degree in computer science!
+                        mathematics. Then, I transferred to California State University Fullerton. Here, 
+                        I got my bachelor's degree in computer science!
                         <br><br>
                         With all that said, I am seeking entry-level work as a software engineer!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
