added h2 element for projects
responsive behavior

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                     </p>
                 </header>
             </div>
-            <!-- MY SKILLS -->
+            <!-- SKILLS -->
             <div class="skills">
+                <!-- TECH SKILLS -->
                 <h2>Technological Skills</h2>
                     <p>I am very comfortable with front-end technologies. In fact, I excel at 
                         writing code to develop attractive and responsive user interfaces that 
@@ -101,6 +102,7 @@
                         <li><img alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" /></li>
                         <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" /></li>
                     </ul>
+                <!-- SOFT SKILLS -->
                 <h2>Soft Skills</h2>
                 <p>I work great with people and I enjoy leadership roles! Truthfully, I find it satisfying to 
                     plan out a project and keep track of tasks to be completed before their due dates.
@@ -118,6 +120,13 @@
             </div>
             <!-- PARTICLE JS CONTAINER -->
             <div id="particles-js" class="projects">
+                <!-- PROJECTS -->
+                <div class="description">
+                    <h2>Projects & Experience</h2>
+                    <p>At this moment, I have a few websites live on the internet. I also have code available for viewing on my Github account. 
+                    To view either, click on a thumbnail below or see my repositories at <a href="https://github.com/bpfefferle" target="_blank">Github</a>!
+                    </p>
+                </div>
                 <!-- PROJECT SHOWCASE CONTAINER -->
                 <div class="grid-container">
                     <div class="item1">
