--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         also used Git in the terminal along with Github often when collaborating with a development 
                         team.
                     </p>
-                    <ul class="skills-grid">
+                    <ul class="skills-grid" style="padding-bottom: 25px;">
                         <li><img alt="Github" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" /></li>
                         <li><img alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" /></li>
                         <li><img alt="Windows" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/windows8/windows8-original.svg" /></li>
@@ -103,7 +103,7 @@
                         <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" /></li>
                     </ul>
                 <!-- SOFT SKILLS -->
-                <h2>Soft Skills</h2>
+                <h2 style="padding-top: 25px;">Soft Skills</h2>
                 <p>I work great with people and I enjoy leadership roles! Truthfully, I find it satisfying to 
                     plan out a project and keep track of tasks to be completed before their due dates.
                 </p>
