--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 						<img src="img/about/brent.jpg" alt="Picture of Brent Pfefferle"> 
 						Hi there, my name is Brent Pfefferle and I am a 
                         computer scientist! At the moment, I specialize in front-end web 
-                        development and I aspire to be a full-stack web developer!
+                        development and I aspire to be a full-stack web developer or software engineer!
                         <br><br>
                         I got my start at Copper Mountain College in Joshua Tree, California. From 
                         there, I graduated with an associate's degree in computer science and 
-                        mathematics. Then, I transferred to California State University Fullerton. Here, 
-                        I got my bachelor's degree in computer science!
+                        mathematics. Then, I transferred to California State University Fullerton. At this school, 
+                        I got my bachelor's degree in computer science (01/2023)!
                         <br><br>
-                        With all that said, I am seeking entry-level work as a software engineer!
+                        With that said, I am seeking entry-level or new graduate roles as a software engineer!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
                     </p>
                 </header>
