--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         I got my start at Copper Mountain College in Joshua Tree, California. From 
                         there, I graduated with an associate's degree in computer science and 
                         mathematics. Then, I transferred to California State University Fullerton. At this school, 
-                        I got my bachelor's degree in computer science (01/2023)!
+                        I got my bachelor's degree in computer science (Jan. 2023)!
                         <br><br>
                         With that said, I am seeking entry-level or new graduate roles as a software engineer!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
