--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <!-- PROJECT SHOWCASE CONTAINER -->
                 <div class="grid-container">
                     <div class="item1">
-                        <a href="tic-tac-toe.html.html" target="_blank"><img src="img/projects/tic-tac-toe.png" alt="Project 1 image"></a>
+                        <a href="tic-tac-toe.html" target="_blank"><img src="img/projects/tic-tac-toe.png" alt="Project 1 image"></a>
                     </div>
                     <div class="item2">
                         <a href="https://beardeddragonowners.com/" target="_blank"><img src="img/projects/bdo.png" alt="Project 2 image"></a>
