--- a/index.html
+++ b/index.html
@@ -45,18 +45,22 @@
                 <header>
                     <h2>About Me</h2>
                     <p>
-						<img src="img/about/brent.jpg" alt="Picture of Brent Pfefferle"> 
-						Hello, my name is Brent Pfefferle and I am a 
-                        computer scientist! At the moment, I specialize in front-end web 
-                        development and I aspire to be a full-stack web developer or software engineer!
+                        <br></br>
+						<img src="img/about/brent.jpg" alt="Picture of Brent Pfefferle">
+                        <br></br>
+                        <b>Last updated: Feb. 1st, 2024.</b> 
+                        <br></br>
+						Hello and welcome, my name is Brent and I am a software engineer. I have 
+                        experience developing front-end websites as well as graphical user interfaces 
+                        for desktop based applications. Overall, UI/UX is my passion!
                         <br><br>
                         I got my start at Copper Mountain College in Joshua Tree, California. From 
                         there, I graduated with an associate's degree in computer science and 
-                        mathematics. Soon after, I transferred to California State University Fullerton. At this school, 
-                        I got my bachelor's degree in computer science (Jan. 2023)!
+                        mathematics. Soon after, I transferred to California State University Fullerton 
+                        which is where I graduated with my bachelor's degree in computer science.
                         <br><br>
-                        With that said, I am seeking entry-level or new graduate roles as a software engineer! To learn more about 
-                        me, please continue to scroll down! I hope to hear from you soon.
+                        At the moment, I currently work with simulation products within the aerospace 
+                        and defense industry.
                     </p>
                     <div class="center">
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
@@ -67,9 +71,9 @@
             <div class="skills">
                 <!-- TECH SKILLS -->
                 <h2>Technological Skills</h2>
-                    <p>I am very comfortable with front-end technologies. In fact, I excel at 
-                        writing code to develop attractive and responsive user interfaces that 
-                        offers a wonderful experience for the user.
+                    <p>I am very comfortable with front-end web technologies. In fact, I have an 
+                        eye for design and I excel at writing code to develop mobile friendly 
+                        and responsive websites that offer a good experience to the user.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="HTML5" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" /></li>
@@ -77,26 +81,25 @@
                         <li><img alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" /></li>
                         <li><img alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" /></li>
                         <li><img alt="SCSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" /></li>
-                        <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li>
+                        <!-- <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li> -->
                     </ul>
-                    <p>In college, most of my projects were written in C++ and Python. Of course, I am familiar 
-                        and comfortable with both of these programming languages. Right now, I prefer 
-                        Python when working with back-end technologies.
+                    <p>Of course, I am not limited to only websites. For instance, I also have experience developing 
+                        desktop applications with languages such as C++ and SQL paired with tools such as Visual Studio 
+                        and SQL Server Management Studio.
                     </p>
                     <ul class="skills-grid">
-                        <li><img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" /></li>
                         <li><img alt="C++" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /></li>
+                        <li><img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" /></li>
                     </ul>
-                    <p>To communicate with a database, I have some experience with the use of SQL and relational databases. 
+                    <!-- <p>To communicate with a database, I have some experience with the use of SQL and relational databases. 
                         Most recently, I have made use of SQLite with Python when working on a REST API for a 
                         school assignment.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="SQLite" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-plain-wordmark.svg" /></li>
-                    </ul>
-                    <p>I have written many applications using VS Code in a Linux or Windows environment. I have 
-                        also used Git in the terminal along with Github often when collaborating with a development 
-                        team.
+                    </ul> -->
+                    <p>Speaking of development tools, I have expertise with tools such as Visual Studio Code, Visual Studio, Github for 
+                        Desktop, Git, Windows, and even familiarity with Linux.
                     </p>
                     <ul class="skills-grid" style="padding-bottom: 25px;">
                         <li><img alt="Github" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" /></li>
@@ -104,6 +107,7 @@
                         <li><img alt="Windows" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/windows8/windows8-original.svg" /></li>
                         <li><img alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" /></li>
                         <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" /></li>
+                        <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" /></li>
                     </ul>
                 <!-- SOFT SKILLS -->
                 <h2 style="padding-top: 25px;">Soft Skills</h2>
@@ -126,8 +130,10 @@
                 <!-- PROJECTS -->
                 <div class="description">
                     <h2>Projects & Experience</h2>
-                    <p>At this moment, I have a few websites live on the internet. I also have code available for viewing on my Github account. 
+                    <p>At the moment, I have a few websites live on the internet. I also have code available for viewing on my Github account. 
                     To view either, click on a thumbnail below or see my repositories at <a href="https://github.com/bpfefferle" target="_blank">Github</a>!
+                    <!-- <br><br> -->
+                    If you are interested to learn more about my professional experience, visit my <a href="https://www.linkedin.com/in/brpfefferle/" target="_blank">LinkedIn</a>.
                     </p>
                 </div>
                 <!-- PROJECT SHOWCASE CONTAINER -->
@@ -155,11 +161,11 @@
 				<a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top"><i class="far fa-envelope"></i></a>
 			</div>
 		</footer>
-		<!-- Bootstrap 4 required scripts (CDN). -->
+		<!-- BOOTSTRAP 4 REQUIRED SCRIPTS (CDN). -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-		<!-- Particle JS. -->
+		<!-- PARTICLE JS. -->
 		<script type="text/javascript" src="js/particles.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
