--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
                 <header>
                     <h2>About Me</h2>
                     <p>
-						<img src="img/about/brent.jpg" alt="Picture of Brent Pfefferle">
-                        <br></br>
-                        <b>Last updated: Nov. 2nd, 2024.</b> 
-                        <br></br>
+						<img src="img/about/brent.jpeg" alt="Picture of Brent Pfefferle">
 						Hi, my name is Brent Pfefferle and I am a software engineer. More specifically, 
                         I have a passion for creating responsive and user-friendly interfaces for websites, 
                         desktop applications, or software in general.
@@ -69,9 +66,10 @@
             <div class="skills">
                 <!-- TECH SKILLS -->
                 <h2>Technological Skills</h2>
-                    <p>I am very comfortable with front-end web technologies. In fact, I have an 
-                        eye for design and I excel at writing code to develop mobile friendly 
-                        and responsive interfaces that offer a good experience to the user (UI/UX).
+                    <p>I love making websites! In fact, I enjoy developing responsive and mobile-friendly websites 
+                        that offer a great experience for the user (UI/UX). In the projects section, you will find 
+                        websites that I have created from scratch using HTML5, CSS3, JavaScript, and frameworks 
+                        such as Bootstrap. In the near future, I plan to learn the React framework.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="HTML5" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" /></li>
@@ -79,43 +77,38 @@
                         <li><img alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" /></li>
                         <li><img alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" /></li>
                         <li><img alt="SCSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" /></li>
-                        <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li>
+                        <!-- <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li> -->
                     </ul>
-                    <p>Of course, I am not limited to only websites. For instance, I also have experience developing 
-                        desktop applications (GUI) with languages such as C++ and SQL.
+                    <p>Besides websites, I also have experience developing graphical user interfaces for desktop based applications 
+                        using languages such as C++, C#, and frameworks like Qt or <a target="_blank" href="https://disti.com/gl-studio/">GL Studio</a>.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="C++" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /></li>
-                        <li><img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" /></li>
+                        <li><img alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" /></li>
+                        <li><img alt="Qt" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/qt/qt-original.svg" /></li>
+                        <li><img alt="SQL" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azuresqldatabase/azuresqldatabase-original.svg" /></li>
                     </ul>
-                    <!-- <p>To communicate with a database, I have some experience with the use of SQL and relational databases. 
-                        Most recently, I have made use of SQLite with Python when working on a REST API for a 
-                        school assignment.
-                    </p>
-                    <ul class="skills-grid">
-                        <li><img alt="SQLite" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-plain-wordmark.svg" /></li>
-                    </ul> -->
-                    <p>Regarding development tools, I have expertise with tools such as Visual Studio Code, Visual Studio, Github for 
-                        Desktop, Git, Windows, and even familiarity with Linux. Overall, I am tech literate.
+                    <p>For development environments and workflow, I have experience using Jira, Git, Linux, Windows, and Visual Studio.
                     </p>
                     <ul class="skills-grid" style="padding-bottom: 25px;">
+                        <li><img alt="JIRA" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jira/jira-original.svg" /></li>
                         <li><img alt="Github" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" /></li>
                         <li><img alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" /></li>
                         <li><img alt="Windows" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/windows8/windows8-original.svg" /></li>
                         <li><img alt="Linux" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" /></li>
                         <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original-wordmark.svg" /></li>
-                        <li><img alt="VS Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" /></li>
+                        <li><img alt="Visual Studio" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain.svg" /></li>
                     </ul>
                 <!-- SOFT SKILLS -->
                 <h2 style="padding-top: 25px;">Soft Skills</h2>
-                <p>Besides tech, here are some soft skills that I offer. In summary, I work well 
-                    with people and I enjoy working on challenging projects.
+                <p>It's not all about the tech skills, I also find soft skills to be important. My greatest strength would be 
+                    interpersonal communication and even public speaking. When working in teams, I do my part for my team 
+                    members by offering unique solutions to our existing problems.
                 </p>
                     <ul>
+                        <li>Interpersonal Communication</li>
+                        <li>Public Speaking</li>
                         <li>Teamwork</li>
-                        <li>Leadership</li>
-                        <li>Interpersonal communication</li>
-                        <li>Public speaking</li>
                         <li>Time management</li>
                         <li>Problem-solving</li>
                         <li>Attention to detail</li>
