--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <!-- <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li> -->
                     </ul>
                     <p>Besides websites, I also have experience developing graphical user interfaces for desktop based applications 
-                        using languages such as C++, C#, and frameworks like Qt or <a target="_blank" href="https://disti.com/gl-studio/">GL Studio</a>.
+                        using languages such as C++, C#, SQL, and frameworks like Qt or <a target="_blank" href="https://disti.com/gl-studio/">GL Studio</a>.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="C++" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /></li>
@@ -119,7 +119,7 @@
             <div id="particles-js" class="projects">
                 <!-- PROJECTS -->
                 <div class="description">
-                    <h2>Projects & Experience</h2>
+                    <h2>Projects</h2>
                     <p>At the moment, I have a few websites live on the internet. I also have code available for viewing on my Github account. 
                     To view either, click on a thumbnail below or see my repositories at <a href="https://github.com/bpfefferle" target="_blank">Github</a>!
                     </p>
