--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>I love making websites! In fact, I enjoy developing responsive and mobile-friendly websites 
                         that offer a great experience for the user (UI/UX). In the projects section, you will find 
                         websites that I have created from scratch using HTML5, CSS3, JavaScript, and frameworks 
-                        such as Bootstrap. In the near future, I plan to learn the React framework.
+                        such as Bootstrap. Currently, I am actively learning the React framework.
                     </p>
                     <ul class="skills-grid">
                         <li><img alt="HTML5" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" /></li>
@@ -77,7 +77,7 @@
                         <li><img alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" /></li>
                         <li><img alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" /></li>
                         <li><img alt="SCSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" /></li>
-                        <!-- <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li> -->
+                        <li><img alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" /></li>
                     </ul>
                     <p>Besides websites, I also have experience developing graphical user interfaces for desktop based applications 
                         using languages such as C++, C#, SQL, and frameworks like Qt or <a target="_blank" href="https://disti.com/gl-studio/">GL Studio</a>.
