--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<!-- SOCIAL MEDIA ICONS. -->
 			<div class="top-header-social-media">
 				<a href="https://github.com/bpfefferle" target="_blank"><i class="fab fa-github-square"></i></a>
-				<a href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/brpfefferle/" target="_blank"><i class="fab fa-linkedin"></i></a>
 				<a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top"><i class="far fa-envelope"></i></a>
 			</div>
 		</header>
@@ -145,7 +145,7 @@
 		<footer class="d-flex justify-content-between align-items-center p-2">
 			<div class="footer-social-media">
 				<a href="https://github.com/bpfefferle" target="_blank"><i class="fab fa-github-square"></i></a>
-				<a href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/brpfefferle/" target="_blank"><i class="fab fa-linkedin"></i></a>
 				<a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top"><i class="far fa-envelope"></i></a>
 			</div>
 		</footer>
