update profile pic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <header>
                     <h2>About Me</h2>
                     <p>
-						<img src="img/about/brent.jpeg" alt="Picture of Brent Pfefferle">
+						<img style="border-radius: 25%; height: 50%;" src="img/about/brent.jpeg" alt="Picture of Brent Pfefferle">
 						Hi, my name is Brent Pfefferle and I am a software engineer. More specifically, 
                         I have a passion for creating responsive and user-friendly interfaces for websites, 
                         desktop applications, or software in general.
